# winshift-python

./: .gitignore  Makefile  README.md  config.sample.toml  pyproject.toml
.github/workflows/: python-package.yml
divvy/: cli.py
divvy/modules/: config.py  layout.py  screen.py  window.py
tests/modules/: test_config.py  test_layout.py  test_screen.py  test_window.py
winshift/: cli.py
winshift/modules/: config.py  direction.py  icons.py  layout.py  screen.py  window.py
