[tool.poetry]
name = "winshift"
version = "0.1.0"
description = ""
authors = ["Julian reyes Escrigas <julian.reyes.escrigas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
argparse = "^1.4.0"
toml = "^0.10.2"
prospector = {extras = ["with-pyroma"], version = "^1.10.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"

[tools.poetry.scripts]
winshift = "winshift.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
